plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.5'
}

group = 'com.hyperperms'
version = '2.4.1'

// Shared version property avoids accessing project at execution time
def buildVersion = objects.property(String).convention(version)

// Override version for dev builds
gradle.taskGraph.whenReady { graph ->
    if (graph.hasTask(':buildDev')) {
        project.version = '0.0.0'
        buildVersion.set('0.0.0')
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    // Hytale Server API (provided at runtime)
    compileOnly files('libs/HytaleServer.jar')

    // Note: HyFactions is a soft dependency using pure reflection
    // No compile-time dependency needed - just runtime class detection

    // JSON handling
    implementation 'com.google.code.gson:gson:2.11.0'

    // High-performance caching
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // Null safety annotations
    compileOnly 'org.jetbrains:annotations:24.1.0'

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Generate BuildInfo.java with project version
def generatedSrcDir = layout.buildDirectory.dir("generated/sources/buildinfo/java")
sourceSets.main.java.srcDir(generatedSrcDir)

tasks.register('generateBuildInfo') {
    def outputDir = generatedSrcDir
    def ver = buildVersion
    inputs.property('version', ver)
    outputs.dir(outputDir)
    doLast {
        def v = ver.get()
        def dir = outputDir.get().asFile.toPath().resolve("com/hyperperms").toFile()
        dir.mkdirs()
        new File(dir, "BuildInfo.java").text = """\
package com.hyperperms;

/**
 * Auto-generated build information.
 */
public final class BuildInfo {
    public static final String VERSION = "${v}";
    private BuildInfo() {}
}
"""
    }
}

tasks.named('compileJava') {
    dependsOn 'generateBuildInfo'
}

// Expand version placeholder in manifest.json
processResources {
    def ver = buildVersion
    inputs.property('version', ver)
    filesMatching('manifest.json') {
        expand(version: ver.get())
    }
}

shadowJar {
    archiveClassifier.set('')

    // Relocate dependencies to avoid conflicts
    relocate 'com.google.gson', 'com.hyperperms.lib.gson'
    relocate 'com.github.benmanes.caffeine', 'com.hyperperms.lib.caffeine'
}

test {
    useJUnitPlatform()
}

build {
    dependsOn shadowJar
}

// Dev build task - clean build with version set to 'dev'
tasks.register('buildDev') {
    group = 'build'
    description = 'Clean build with dev version identifier'
    dependsOn 'clean', 'build'
}

tasks.named('build') {
    mustRunAfter 'clean'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['-Xlint:all', '-Xlint:-processing'])
}
